style.css
body {
    display: grid;
    margin: 0;
    padding: 0;
    width: 100vw;
}

#IndexHello {
    width: 100vw;
    height: 100vh;
    color: #ffffff;
    top: 0;
    left: 0;
    position: relative;
    align-content: center;
    display: grid;
}

h1 {
    font-size: 15em;
    font-weight: bold;
    text-align: center;
}

h2 {
    font-size: 2.5em;
    font-weight: bold;
    text-align: center;
}

#IndexDirectories {
    width: 100vw;
    height: 100vh;
    color: #ffffff;
    display: grid;
    position: relative;
    grid-template-columns: calc(100vw/3) calc(100vw/3) calc(100vw/3);
    padding: 0;
    margin: 0;
}

.indexHead {
    font-size: 5vw;
    padding: 0;
    margin: 0;
}

.directory {
    padding: 0;
    margin: 0;
    background-color: rgba(20, 30, 40, 0.5);
    display: grid;
    height: 100vh;
    overflow: hidden;
}

.directory-text {
    align-self: center;
    text-align: center;
    background-color: rgba(20, 20, 20, 0.2);
    z-index: 1;
}

.directory-img {
    position: absolute;
    height: 100%;
    z-index: 0;
    display: block;
}

.skew {
    transform: skewX(10deg);
}

.anti-skew {
    transform: skewX(-10deg);
    z-index: 1;
}

.skew-compensation {
    margin-left: calc(-100vh * 0.09); /*slope of a line 10 degrees from vertical  5.6712818*/
}

